# context-runtime

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  Dockerfile  GO_PORT.md  GO_REWRITE_PLAN.md  POSITIONING.md  README.md  ROADMAP.md  SPEC.md  benchmarks.html  context_runtime.yaml  contextos.yaml  pyproject.toml
benchmarks/: graph_compare.py
benchmarks/context-vs-model/: .gitignore  README.md  RESULTS-nutri.md  RESULTS.md
context_runtime/: __init__.py  abstention.py  explain.py  modules.yaml  quality.py  types.py
context_runtime/adapters/: __init__.py  model_litellm.py  model_openai.py  retriever_iterative.py  store_analytical.py  store_community.py  store_diver.py  store_duckdb.py  store_hipporag.py  store_image.py  store_inmemory.py  store_multimodal.py  store_multivector.py  store_pgvector.py  store_postgres.py  store_redevops.py  store_router.py  store_semantic.py  store_temporal.py  store_turbovec.py  store_video.py  warehouse_duckdb.py
context_runtime/compression/: __init__.py
context_runtime/constraints/: __init__.py
context_runtime/control_plane/: DEPLOY.md  __init__.py  app.py  channels.py  context.py  fleet.py  mcp_server.py  registry.py  router.py  safety.py  views.py
context_runtime/costmodel/: __init__.py  estimators.py  profile.py  score.py
context_runtime/execution/: __init__.py  graph.py
context_runtime/ingest/: __init__.py  extractors.py  multimodal.py  paddle_ocr.py  parquet_corpus.py  pdf_tables.py  pipeline.py  quality.py
context_runtime/integrations/: __init__.py  agent_console.py  agentic_billing.py  agentic_books.py  agentic_compliance.py  agentic_support.py  bandit.py  calibration.py  chat_memory.py  control_tower.py  edge_sentinel.py  growth_engine.py  job_leads.py  librechat.py  loadmeter.py  market_radar.py  modules.py  multimodal_classifier.py  outreach_contacts.py  outreach_engine.py  outreach_icp.py  redevops_rag.py  sidekick.py  sidekick_orchestrator.patch  signals.py  social_autopilot.py  supply_chain.py  vibexgen.py  vuln_db.py  vuln_feeds.py
context_runtime/learning/: __init__.py  aggregator.py  bus.py  events.py  kafka_bus.py  reward.py
context_runtime/observability/: __init__.py  exporters.py
context_runtime/optimizer/: __init__.py  knapsack.py  online.py
context_runtime/plancache/: __init__.py
context_runtime/planner/: __init__.py  candidates.py  candidates_registry.py  intent.py  llm_intent.py  representations.py  rules.py
context_runtime/plugins/: __init__.py  base.py
context_runtime/policy/: __init__.py  commands.py  factories.py  plane.py  store.py
context_runtime/providers/: README.md  TESTING_WITH_CREDS.md  __init__.py  base.py  guarded_model.py  wiring.py
context_runtime/reasoner/: __init__.py  single_shot.py  strategies.py  strategy_reasoner.py  verify.py
context_runtime/registry/: __init__.py  capabilities.py
context_runtime/runtime/: __init__.py  cli.py  config.py  runtime.py
context_runtime/scheduler/: __init__.py  load_aware.py  parallel_fusion.py  schedule.py  two_stage.py
context_runtime/scripts/: __init__.py  fit_calibration.py
context_runtime/sources/: __init__.py  dlt_source.py  local.py
context_runtime/tools/: __init__.py  base.py  mcp.py  retriever.py
context_runtime/verification/: __init__.py  verifier.py
contextos/: __init__.py  jsonio.py  types.py
contextos/adapters/: __init__.py  model_litellm.py  model_stub.py  store_hipporag.py  store_redevops.py  store_router.py
contextos/compression/: __init__.py  structural.py
contextos/constraints/: __init__.py  hard.py
contextos/costmodel/: __init__.py  estimators.py  statistics.py
contextos/execution/: __init__.py
contextos/integrations/: __init__.py  bandit.py  edge_sentinel.py  modules.py  redevops_rag.py  sidekick.py  sidekick_orchestrator.patch
contextos/observability/: __init__.py  exporters.py  traces.py
contextos/optimizer/: __init__.py  knapsack.py
contextos/plancache/: __init__.py  cache.py
contextos/planner/: __init__.py  intent.py  rules.py
contextos/plugins/: __init__.py  base.py
contextos/reasoner/: __init__.py
docs/: BENCHMARK-REPORT.md  BENCHMARKS-v3-preliminary.md
eval/: context_runtime_eval.md  context_runtime_eval.py
examples/: agentic_billing.py  agentic_books.py  agentic_compliance.py  agentic_support.py  capability_registry.py  chat_memory.py  consolidated_benchmark.py  control_tower.py  dspark_calibration_bench.py  explain.py  fleet_tenants.py  growth_engine.py  heterogeneous_shards.py  hop_routing.py  incident_review.py  learning_loop.py  market_radar.py  multimodal_image_search.py  online_learning.py  online_vs_static_bench.py  outreach_engine.py  outreach_pipeline.py  parallel_fusion.py  rag_tuning.py  sidekick_learning.py  soc_triage.py  social_autopilot.py  temporal_retrieval.py  trust_aware.py  vibexgen_learning.py
go/: go.mod
tests/: test_agent_console_policy.py  test_analytical_retriever.py  test_bandit_discount.py  test_bedrock_kb_retriever.py  test_bedrock_model.py  test_calibration_scheduler.py  test_capability_registry.py  test_community_iterative.py  test_compare.py  test_conformance.py  test_contacts.py  test_context_pack.py  test_control_plane.py  test_digitalocean_provider.py  test_explain.py  test_gcp_provider.py  test_generation_explain.py  test_generation_priors.py  test_generation_reward.py  test_generation_strategy.py  test_generation_verify_model.py  test_governance_adapters.py  test_governed_optimizer.py  test_graph_compare.py  test_hop_routing.py  test_incremental_insert.py  test_integration_modules.py  test_integration_rag.py  test_integration_security.py  test_integration_sidekick.py  test_integration_vibexgen.py  test_job_leads.py  test_kafka_bus.py  test_learning_default_path.py  test_learning_loop.py  test_librechat.py  test_mcp.py  test_multimodal.py  test_multimodal_classifier.py  test_multivector.py  (+35 more)
(+95 files in other folders)
