[project]
name = "contextos"
version = "0.1.0"
description = "ContextOS — a database query planner for LLM context. The runtime decides what a model sees before it answers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
# v0.1 core runs fully offline with the stub plugins — zero hard runtime deps.
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real model transport across 100+ providers (the ModelPlugin binding).
litellm = ["litellm>=1.40"]
# Hybrid retrieval binding (DuckDB vector + BM25 + RRF + rerank).
rag = ["redevops-rag @ git+https://github.com/redevops-io/redevops-rag.git"]
# Physical execution binding (the SchedulerPlugin compiles to Dagster runs).
dagster = ["dagster>=1.7"]
# Observability export.
otel = ["opentelemetry-sdk>=1.20"]
langfuse = ["langfuse>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.7"]

[project.scripts]
contextos = "contextos.runtime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contextos"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
