[project]
name = "context-runtime"
version = "0.1.0"
description = "Context Runtime — a database query planner for LLM context. The runtime decides what a model sees before it answers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0" }
# v0.1 core runs fully offline with the stub plugins — zero hard runtime deps.
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real model transport across 100+ providers (the ModelPlugin binding).
litellm = ["litellm>=1.40"]
# Single-hop hybrid retrieval (DuckDB vector + BM25 + RRF + rerank).
rag = ["redevops-rag @ git+https://github.com/redevops-io/redevops-rag.git"]
# Multi-hop graph retrieval (knowledge graph + Personalized PageRank).
hipporag = ["hipporag @ git+https://github.com/redevops-io/HippoRAG.git"]
# Physical execution binding (the SchedulerPlugin compiles to Dagster runs).
dagster = ["dagster>=1.7"]
# Observability export.
otel = ["opentelemetry-sdk>=1.20"]
langfuse = ["langfuse>=2.0"]
# The control plane (fleet dashboard + API over the ModuleTenant fleet).
control-plane = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]
dev = ["pytest>=8.0", "ruff>=0.7"]

[project.scripts]
context-runtime = "context_runtime.runtime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context_runtime"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
