[project]
name = "context-runtime"
version = "0.1.0"
description = "Context Runtime — a database query planner for LLM context. The runtime decides what a model sees before it answers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0" }
# v0.1 core runs fully offline with the stub plugins — zero hard runtime deps.
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real model transport across 100+ providers (the ModelPlugin binding).
litellm = ["litellm>=1.40"]
# Single-hop hybrid retrieval (DuckDB vector + BM25 + RRF + rerank).
rag = ["redevops-rag @ git+https://github.com/redevops-io/redevops-rag.git"]
# Multi-hop graph retrieval (knowledge graph + Personalized PageRank).
hipporag = ["hipporag @ git+https://github.com/redevops-io/HippoRAG.git"]
# Semantic (embedding) retrieval + hybrid BM25⊕semantic fusion — deterministic ONNX
# embeddings (no torch) that bridge synonyms/morphology lexical BM25 can't. The runtime
# falls back to pure BM25 when this isn't installed.
embeddings = ["fastembed>=0.3", "numpy>=1.24"]
# Physical execution binding (the SchedulerPlugin compiles to Dagster runs).
dagster = ["dagster>=1.7"]
# Multimodal ingestion (mixed assets → normalized text corpus). Text-layer formats
# (PDF/DOCX/HTML) need only the base extras; image OCR and audio/video ASR activate
# when the userland backends below are present (no system tesseract / torch required).
ingest = ["pypdf>=4.0", "python-docx>=1.1", "beautifulsoup4>=4.12", "lxml>=5.0"]
ingest-multimodal = ["pypdf>=4.0", "python-docx>=1.1", "beautifulsoup4>=4.12", "lxml>=5.0",
                     "rapidocr-onnxruntime>=1.3", "faster-whisper>=1.0"]
# Data connectors (SourcePlugin) — dlt is a library-shaped, Apache-2.0 connector suite
# (SQL / REST / filesystem / S3 / SaaS). Connectors run Python-side; the Go runtime
# consumes the normalized output. Absent this, only the local-folder source is available.
connectors = ["dlt>=1.0"]
# OCR + table recognition (ExtractorPlugin) — PaddleOCR/PP-Structure (Apache-2.0). Adds
# multilingual OCR and lab-table extraction on top of the base rapidocr backend.
ocr = ["paddleocr>=2.7", "paddlepaddle>=2.6"]
# Observability export.
otel = ["opentelemetry-sdk>=1.20"]
langfuse = ["langfuse>=2.0"]
# The control plane (fleet dashboard + API over the ModuleTenant fleet).
control-plane = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]
dev = ["pytest>=8.0", "ruff>=0.7"]

[project.scripts]
context-runtime = "context_runtime.runtime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context_runtime"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
